# rust-nannou-workshop

./: Cargo.toml  README.md
Part1/: README.md
basic_app/: Cargo.toml
basic_app/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  osc_functions.rs
part1/: Cargo.toml  README.md
part1/src/: whitney.rs
part1/src/suggestions/: part1a.rs  part1b.rs  part1c.rs  part1d.rs  part1e.rs  part1f.rs  part1g.rs  part1h.rs  part1i.rs  part1j.rs  part1k.rs  part1l.rs
part2/: Cargo.toml  README.md
part2/src/suggestions/: part2a.rs  part2f.rs
part3/: Cargo.toml  README.md
part3/src/: main.rs
part3/src/suggestions/: part3a.rs  part3b.rs  part3c.rs  part3d.rs  part3e.rs  part3f.rs  part3g.rs  part3i.rs  part3j.rs  part3x.rs
texts/: cheat-sheet.md  reading-docfiles.md  sources_of_inspiration.md
