[package]
name = "part2"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou.workspace = true
common = { path="../common"}

[[bin]]
name = "part2a"
path = "src/suggestions/part2a.rs"

[[bin]]
name = "part2b"
path = "src/suggestions/part2b.rs"

[[bin]]
name = "part2c"
path = "src/suggestions/part2c.rs"

[[bin]]
name = "part2d"
path = "src/suggestions/part2d.rs"

[[bin]]
name = "part2e"
path = "src/suggestions/part2e.rs"

[[bin]]
name = "part2f"
path = "src/suggestions/part2f.rs"
