[package]
name = "part3"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou.workspace = true

[[bin]]
name = "part3a"
path = "src/suggestions/part3a.rs"

[[bin]]
name = "part3b"
path = "src/suggestions/part3b.rs"

[[bin]]
name = "part3c"
path = "src/suggestions/part3c.rs"

[[bin]]
name = "part3x"
path = "src/suggestions/part3x.rs"

