[package]
name = "part3"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou.workspace = true

[[bin]]
name = "part3a"
path = "src/suggestions/part3a.rs"

[[bin]]
name = "part3b"
path = "src/suggestions/part3b.rs"

[[bin]]
name = "part3c"
path = "src/suggestions/part3c.rs"

[[bin]]
name = "part3d"
path = "src/suggestions/part3d.rs"

[[bin]]
name = "part3e"
path = "src/suggestions/part3e.rs"

[[bin]]
name = "part3f"
path = "src/suggestions/part3f.rs"

[[bin]]
name = "part3g"
path = "src/suggestions/part3g.rs"

[[bin]]
name = "part3h"
path = "src/suggestions/part3h.rs"

[[bin]]
name = "part3i"
path = "src/suggestions/part3i.rs"

[[bin]]
name = "part3j"
path = "src/suggestions/part3j.rs"

[[bin]]
name = "part3x"
path = "src/suggestions/part3x.rs"

